fix title wrap

--- a/src/less/components/_components.less
+++ b/src/less/components/_components.less
@@ -1,7 +1,10 @@
 .projectBrief {
+    flex-wrap: initial;
+
     .border-line-between {
         height: 180px;
         padding-top: 0.5rem;
+
     }
 
     .border-line-between:after {
